--- a/.dockerignore
+++ b/.dockerignore
@@ -3,8 +3,26 @@ __pycache__
 *.pyo
 *.pyd
 .Python
-.git
-.gitignore
-README.md
-.env
+env
+pip-log.txt
+pip-delete-this-directory.txt
+.tox
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
 *.log
+.git
+.mypy_cache
+.pytest_cache
+.hypothesis
+.DS_Store
+*.tar
+*.zip
+node_modules
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
